[package]
name = "otlp-exporter"
version = "0.1.1"
edition = "2021"
description = "OTLP Exporter for the OpenTelemetry Collector"
homepage = "https://github.com/fortime/otlp-exporter/tree/main"
repository = "https://github.com/fortime/otlp-exporter/tree/main"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "otlp", "exporter"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
opentelemetry-semantic-conventions = "0.12.0"
tokio = { version = "1.29.1", default-features = false, features = ["rt-multi-thread", "macros"] }
opentelemetry_sdk = { version = "0.20.0", default-features = false, features = ["rt-tokio"] }
temp-env = "0.3.4"

[dependencies]
async-trait = "0.1.73"
futures = { version = "0.3.28", default-features = false, features = ["std"] }
grpcio = { version = "0.12.1", optional = true, default-features = false }
http = "0.2.9"
opentelemetry-proto = "0.3.0"
opentelemetry_api = { version = "0.20.0", default-features = false }
opentelemetry_sdk = { version = "0.20.0", default-features = false }
prost = { version = "0.11.9", default-features = false, features = ["std"], optional = true }
protobuf = { version = "2.28.0", optional = true }
reqwest = { version = "0.11.18", default-features = false, optional = true, features = ["async-compression"] }
thiserror = "1.0.41"
tonic = { version = "0.9.2", optional = true, default-features = false, features = ["channel", "transport"] }

[features]
traces = ["opentelemetry_api/trace", "opentelemetry_sdk/trace", "opentelemetry-proto/traces"]
metrics = ["opentelemetry_api/metrics", "opentelemetry_sdk/metrics", "opentelemetry-proto/metrics"]
logs = ["opentelemetry-proto/logs"]
_tls = []
_grpc = []
grpcio = ["dep:grpcio", "opentelemetry-proto/gen-protoc", "protobuf", "_grpc"]
_grpcio-tls = ["_tls"]
grpcio-tls = ["grpcio", "grpcio/openssl", "_grpcio-tls"]
grpcio-tls-vendored = ["grpcio", "grpcio/openssl-vendored", "_grpcio-tls"]
tonic = ["dep:tonic", "opentelemetry-proto/gen-tonic", "_grpc"]
tonic-tls = ["tonic/tls", "_tls"]
http = ["opentelemetry-proto/gen-tonic", "prost", "reqwest"]
_http-tls = ["_tls"]
_http-native-tls = ["_http-tls"]
_http-rustls-tls = ["_http-tls"]
http-native-tls = ["http", "_http-native-tls", "reqwest/native-tls"]
http-native-tls-vendored = ["http", "_http-native-tls", "reqwest/native-tls-vendored"]
http-rustls-tls = ["http", "_http-rustls-tls", "reqwest/rustls-tls"]
http-rustls-tls-webpki-roots = ["http", "_http-rustls-tls", "reqwest/rustls-tls-webpki-roots"]
http-rustls-tls-native-roots = ["http", "_http-rustls-tls", "reqwest/rustls-tls-native-roots"]
http-json = ["http"]
http-json-native-tls = ["http-json", "_http-native-tls", "reqwest/native-tls"]
http-json-native-tls-vendored = ["http-json", "_http-native-tls", "reqwest/native-tls-vendored"]
http-json-rustls-tls = ["http-json", "_http-rustls-tls", "reqwest/rustls-tls"]
http-json-rustls-tls-webpki-roots = ["http-json", "_http-rustls-tls", "reqwest/rustls-tls-webpki-roots"]
http-json-rustls-tls-native-roots = ["http-json", "_http-rustls-tls", "reqwest/rustls-tls-native-roots"]
